[package]
name = "rabc"
version = "0.1.1"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.3.3"
byteorder = "1.4.3"
num-traits = "0.2"
num-derive = "0.4"
flate2 = { version = "1.0", optional = true }
lzma-rs = { version = "0.3", optional = true }
thiserror = "1.0.63"

[features]
default = ["flate2", "lzma-rs"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
restriction = { level = "warn", priority = -1 }
# Allowed pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# Disallowed restriction lints
or_fun_call = "warn"
str_to_string = "warn"
inconsistent_struct_constructor = "warn"
print_stdout = "warn"
print_stderr = "warn"
use_self = "warn"
