[package]
name = "rabc"
version = "0.1.1"
edition = "2021"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.7.0"
byteorder = "1.5.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
flate2 = { version = "1.0.35", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
thiserror = "2.0.11"

[features]
default = ["flate2", "lzma-rs"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
restriction = { level = "warn", priority = -1 }
# Allowed pedantic lints
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# Disallowed restriction lints
or_fun_call = "warn"
str_to_string = "warn"
inconsistent_struct_constructor = "warn"
print_stdout = "warn"
print_stderr = "warn"
use_self = "warn"
